<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@color/textColorPrimary"
        android:background="#7E8AA2"
        android:minHeight="50dp"
        android:padding="10dp"
        android:layout_marginBottom="3dp"
        android:text="Statistics"/>

    <TextView
        android:id="@+id/text_view_food_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/food_statistics_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/text_view_total_calories_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Total calories entered"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/text_view_total_fat_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Total fat entered"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/text_view_total_carbs_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Total carbs entered"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <TextView
            android:id="@+id/text_view_total_protein_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Total protein entered"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/text_view_stats_beer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Times 'beer' appears"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_beer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <TextView
            android:id="@+id/text_view_stats_potato_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Times 'potato' appears"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/text_view_total_potato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:layout_weight="1"
            android:gravity="right"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_view_cardio_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/cardio_statistics_header"/>

    <TextView
        android:id="@+id/text_view_lifting_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/lifting_statistics_header"/>

</LinearLayout>